# ffp-ipam

./: .gitignore  Cargo.nix  Cargo.toml  README.md  Rocket.toml  crate-hashes.json  default.nix  flake.nix  release.nix  shell.nix
migrations/2019-02-22-212216_ip4s/: up.sql
migrations/2019-02-25-160841_create_ips/: down.sql  up.sql
nix/: crates-io.list  crates-io.nix
src/: auth.rs  ip4.rs  main.rs  repo.rs  schema.rs  tests.rs
src/ip4/: mod.rs
web/: README.md  build.sh  default.nix  elm-srcs.nix  elm.json  index.md
web/markdown/: index.md
web/src/: register.elm
