[package]
name = "rust_ipam"
version = "0.1.0"
authors = ["Justin Humm <justin.humm@posteo.de>"]

[dependencies]
rocket = "0.4.0"
serde = { version = "*", features = ["derive"] }
serde_derive = "*"
serde_json = "*"
ipnetwork = "*"
ipnet = { version = "*", features = ["serde"] }
git2 = "*"
fs2 = "*"

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["json", "diesel_sqlite_pool"]

[dependencies.diesel]
version = "1.0.0"
features = ["sqlite", "network-address"]
