[package]
name = "ffp-ipam"
version = "0.1.0"
authors = ["Justin Humm <justin.humm@posteo.de>"]
edition = "2018"

[dependencies]
rocket = { version = "0.5.0-dev", git = "https://github.com/SergioBenitez/Rocket", branch = "master" }
rocket_contrib = { version = "0.5.0-dev", git = "https://github.com/SergioBenitez/Rocket", branch = "master" }
serde = { version = "*", features = ["derive"] }
serde_derive = "*"
serde_json = "*"
ipnet = { version = "*", features = ["serde"] }
git2 = "*"
docopt = "*"

