[package]
name = "ffp-ipam"
version = "0.1.0"
authors = ["Kerstin Humm <kerstin@erictapen.name>"]
edition = "2018"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = [ "json" ] }
rocket_sync_db_pools = { version = "0.1.0-rc.1" }
serde = { version = "*", features = ["derive"] }
serde_derive = "*"
serde_json = "*"
ipnet = { version = "*", features = ["serde"] }
git2 = "*"
docopt = "*"
rust-crypto = "*"

